# StockSense-Intelligence-Platform

./: AAPL_full_data.csv  full_stock_data.csv  pyproject.toml  stock.py  stock_data.csv  test.ipynb  test.py
Docs/.obsidian/: workspace.json
docs/: Architecture Overview.md  companies_symbol.md  data_catalog.md
docs/.obsidian/: workspace.json
docs/Excalidraw/: Daily Automatic Cycle.excalidraw.md  Drawing 2026-02-18 22.26.11.excalidraw.md  production_architecture.excalidraw.md
ml_model/dataset/: Alphabet_Inc_-_Class_A_GOOGL_stocks.csv  Amazoncom_Inc_AMZN_stocks.csv  JPMorgan_Chase_&_Company_JPM_stocks.csv  Meta_Platforms,_Inc_META_stocks.csv  Microsoft_Corporation_MSFT_stocks.csv  NVIDIA_Corp_NVDA_stocks.csv  Tesla_Inc_TSLA_stocks.csv  Visa_Inc_-_Class_A_V_stocks.csv  Walmart_Inc_WMT_stocks.csv
ml_model/notebooks/: all_stock.ipynb
ml_model/scripts/: fetch_all_company_stock,py
