[project]
name = "stocksense-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "growwapi>=1.5.0",
    "pandas>=2.2.3,<3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
